@@ -285,16 +285,6 @@
       </fileset>
     </copy>
 
-    <copy todir = "${classes.dir}">
-      <fileset dir = "${test.dir}">
-        <include name = "**/*.xml" />
-        <include name = "**/*.properties" />
-      </fileset>
-      <fileset dir = "${test.dir}">
-        <include name = "**/*.xml" />
-      </fileset>
-    </copy>
-
     <javac destdir = "${classes.dir}" classpathref = "compile.path.id"
            debug = "${build.debug}" encoding = "${default.javac.encoding}">
       <src path = "${src.dir}"/>
