@@ -7,6 +7,10 @@ New Features:
   - Controller API extension - v2 (ORCJAVA-492)
   - Added Alarm Protocol (ORCJAVA-508)
 
+Bug Fixes:
+
+  - Fixed: Test fixtures are bundle with controller distribution (ORCJAVA-431)
+
 Controller Pro 1.4.1
 ====================
 
